// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree can create empty Tree 1`] = `
<div
  className="Tree"
  id="tech-tree"
>
  <svg
    className="Link-Container"
  />
</div>
`;

exports[`Tree can create simple Tree 1`] = `
<div
  className="Tree"
  id="tech-tree"
>
  <svg
    className="Link-Container"
  />
  <div
    className="Tree-Row"
  >
    <div
      className="Node Sprite"
      id="A"
      onClick={[Function]}
      style={
        Object {
          "transform": "scale(1)",
        }
      }
    />
    <div
      className="Node Sprite"
      id="B"
      onClick={[Function]}
      style={
        Object {
          "transform": "scale(1)",
        }
      }
    />
  </div>
</div>
`;
